fixed styling issues

--- a/src/organisation/containers/organisation/organisation.component.html
+++ b/src/organisation/containers/organisation/organisation.component.html
@@ -25,7 +25,7 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">PBA number</th>
       <td class="govuk-table__cell">
-        <a class="govuk-link" href="#" *ngIf="showChangePbaNumberLink" id="change-pba-account-numbers__link" aria-label="Change PBA account numbers">Change</a>
+        <a class="govuk-link fright" href="#" *ngIf="showChangePbaNumberLink" id="change-pba-account-numbers__link" aria-label="Change PBA account numbers">Change</a>
 
         <div *ngIf="organisationPaymentAccount">
           <div *ngFor="let pbaNumber of organisationPaymentAccount">{{pbaNumber}}</div>
