--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,10 +23,6 @@ td.govuk-table__cell {
   white-space: pre-wrap;
 }
 
-td.govuk-table__cell a.govuk-link {
-  float: right;
-}
-
 .detailed-cya-registration-message {
   color: #d4351c;
   font-weight: 700;
@@ -84,3 +80,7 @@ div.govuk-header__logo, div.hmcts-header__logo {
   background: #005ea5;
   height: 5px;
 } 
+
+.fright {
+  float: right;
+}
