EUI-3087-multiple-pbas: add more unit tests for multiple pbas in RO

--- a/src/register/containers/hmcts-form-builder/src/lib/components/input-button/input-button.component.scss
+++ b/src/register/containers/hmcts-form-builder/src/lib/components/input-button/input-button.component.scss
@@ -8,7 +8,8 @@
 }
 .button-cell {
   display: table-cell;
-  vertical-align: middle;
+  vertical-align: bottom;
+  padding-bottom: 3px;
   width: 15%;
 }
 .govuk-button {
