--- a/src/register/containers/hmcts-form-builder/src/lib/components/textareas/textareas.component.html
+++ b/src/register/containers/hmcts-form-builder/src/lib/components/textareas/textareas.component.html
@@ -5,7 +5,7 @@
                [forElement]="labelFor">{{label.text}}
     </app-label>
     <ng-container *ngIf="validationError">
-        <app-validation-error-formcontrol *ngIf="showValidation" [group]="group" [controlId]="control" id="{{control}}">{{validationError.value}}</app-validation-error-formcontrol>
+        <app-validation-error-formcontrol *ngIf="showValidation" [group]="group" [controlId]="control" id="{{control}}-error">{{validationError.value}}</app-validation-error-formcontrol>
     </ng-container>
     <textarea [class]="classes"
               [ngClass]="{'govuk-textarea--error':isControlInvalidAndShowValidation(group, control, showValidation) || isGroupInvalidAndShowValidation(group, showValidation)}"
