added link styling for remove

--- a/src/organisation/containers/update-pba-numbers/update-pba-numbers.component.html
+++ b/src/organisation/containers/update-pba-numbers/update-pba-numbers.component.html
@@ -10,7 +10,7 @@
             <tr class="govuk-table__row" *ngFor="let pba of organisationPaymentAccount">
               <th class="govuk-table__header" scope="row">{{pba}}</th>
               <td class="govuk-table__cell">
-                <a class="govuk-link" href="#" id="remove-pba-account-number__link"
+                <a class="govuk-link fright" href="#" id="remove-pba-account-number__link"
                   aria-label="Remove PBA account number">Remove</a>
               </td>
             </tr>
