--- a/src/register/components/notification-banner/notification-banner.component.html
+++ b/src/register/components/notification-banner/notification-banner.component.html
@@ -1,5 +1,5 @@
 <div aria-labelledby="error-summary-title" class="govuk-error-summary">
-  <h2 class="govuk-error-summary__title">There is a problem</h2>
+  <h2 id="error-summary-title" class="govuk-error-summary__title">There is a problem</h2>
   <div class="govuk-list govuk-error-summary__list">
   <a href="/register-org/register/check#h1"> <ng-content></ng-content></a>
   </div>
