focus move to error summary when error popsup

--- a/src/register/components/notification-banner/notification-banner.component.html
+++ b/src/register/components/notification-banner/notification-banner.component.html
@@ -1,8 +1,7 @@
-<main id="content" role="main">
-  <div aria-labelledby="error-summary-title" class="govuk-error-summary">
-    <h2 class="govuk-error-summary__title">There is a problem</h2>
-    <div class="govuk-list govuk-error-summary__list">
+<div aria-labelledby="error-summary-title" role="alert" class="govuk-error-summary">
+  <h2 id="error-summary-title" class="govuk-error-summary__title">There is a problem</h2>
+  <div class="govuk-list govuk-error-summary__list">
     <a href="/register-org/register/check#h1"> <ng-content></ng-content></a>
-    </div>
   </div>
-  </main>
+</div>
+ 
