--- a/src/organisation/containers/update-pba-numbers/update-pba-numbers.component.html
+++ b/src/organisation/containers/update-pba-numbers/update-pba-numbers.component.html
@@ -1,49 +1,1 @@
-<app-hmcts-main-wrapper [backLink]="'/organisation'" [title]="title">
-  <div>
-    <p>We will need to verify any new PBA numbers before they can be used to pay for a case.</p>
-
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
-
-        <table class="govuk-table" *ngIf="organisationPaymentAccount">
-          <tbody class="govuk-table__body">
-            <tr class="govuk-table__row" *ngFor="let pba of organisationPaymentAccount">
-              <th class="govuk-table__header" scope="row">{{pba}}</th>
-              <td class="govuk-table__cell">
-                <a class="govuk-link fright" href="#" id="remove-pba-account-number__link"
-                  aria-label="Remove PBA account number">Remove</a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-
-        <form [formGroup]="pbaFormGroup">
-          <div formArrayName="pbaNumbers">
-            <div *ngFor="let pbaNumber of pbaNumbers.controls; let i=index">
-              <div [formGroupName]="i">
-                <!-- <xuilib-gov-uk-input [config]="{label: 'PBA Number', name: 'pbaNumber', id: 'pba-number-input' + i, type: 'text'}" [group]="pbaFormGroup">
-                </xuilib-gov-uk-input> -->
-
-                <input type="text" formControlName="pbaNumber">
-  
-                <button type="button" class="govuk-button hmcts-button--secondary fright" (click)="onRemoveNewPbaNumberClicked(i)">
-                  Remove
-                </button>
-              </div>
-            </div>
-          </div>
-        </form>
-      </div>
-    </div>
-
-    <div>
-      <button type="submit" class="govuk-button hmcts-button--secondary" (click)="onAddNewBtnClicked()">
-        Add another PBA number
-      </button>
-    </div>
-
-    <button type="submit" class="govuk-button">
-      Continue
-    </button>
-  </div>
-</app-hmcts-main-wrapper>
+<app-prd-pba-numbers-form-component [updatePbaNumbers]="updatePbaNumbers"></app-prd-pba-numbers-form-component>
