disabled continue button on invalid form

--- a/src/organisation/components/pba-numbers-form/pba-numbers-form.component.html
+++ b/src/organisation/components/pba-numbers-form/pba-numbers-form.component.html
@@ -46,7 +46,7 @@
       </button>
     </div>
 
-    <button type="submit" class="govuk-button">
+    <button type="submit" class="govuk-button" [disabled]="pbaFormGroup.invalid">
       Continue
     </button>
   </div>
