--- a/src/users/components/invite-user-permissions/invite-user-permission.component.html
+++ b/src/users/components/invite-user-permissions/invite-user-permission.component.html
@@ -31,7 +31,14 @@
           [isChecked]="isCaseAccessAdmin"
           [config]="{value: 'pui-caa', label: 'Case access administrator', name: 'roles',
           hint: 'Manage case access for all users within your organisation. You can assign this role to any user in your organisation. However, your service might not currently support this role. You will receive further guidance once it becomes available.'}">
-      </lib-gov-checkbox>
+        </lib-gov-checkbox>
+
+        <lib-gov-checkbox id="checkbox-grant-finance-manager"  *ngIf="grantFinanceManager$ | async"
+          [group]="inviteUserForm.controls['roles']"
+          [isChecked]="isPuiFinanceManager"
+          [config]="{value: 'pui-finance-manager', label: 'Manage fee accounts', name: 'roles',
+          hint: 'View payments, account balances, available credit and transactions.'}">
+        </lib-gov-checkbox>
       </div>
 
     </lib-gov-uk-form-group-wrapper>
