--- a/src/organisation/components/pba-numbers-form/pba-numbers-form.component.html
+++ b/src/organisation/components/pba-numbers-form/pba-numbers-form.component.html
@@ -5,9 +5,11 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <table class="govuk-table" *ngIf="getCurrentPaymentAccounts().length; else noPbaNumbersMessage">
+        <p *ngIf="noAccountsAdded">No PBA accounts added.</p>
+
+        <table class="govuk-table">
           <tbody class="govuk-table__body">
-            <tr class="govuk-table__row" *ngFor="let pba of getCurrentPaymentAccounts()">
+            <tr class="govuk-table__row" *ngFor="let pba of currentPaymentAccounts">
               <th class="govuk-table__header" scope="row">{{pba}}</th>
               <td class="govuk-table__cell">
                 <a class="govuk-link fright" id="remove-pba-account-number__link" [routerLink]=""
@@ -17,11 +19,7 @@
             </tr>
           </tbody>
         </table>
-
-        <ng-template #noPbaNumbersMessage>
-          <p *ngIf="organisation.pendingAddPaymentAccount.length === 0">No PBA accounts added.</p>
-        </ng-template>
-
+        
         <form [formGroup]="pbaFormGroup" id="new-pba-form">
           <div formArrayName="pbaNumbers">
             <div *ngFor="let pbaNumberCtrl of pbaNumbers.controls; let i=index">
