--- a/src/organisation/containers/update-pba-numbers/update-pba-numbers.component.html
+++ b/src/organisation/containers/update-pba-numbers/update-pba-numbers.component.html
@@ -1,1 +1,1 @@
-<app-prd-pba-numbers-form-component [organisation]="organisation"></app-prd-pba-numbers-form-component>
+<app-prd-pba-numbers-form-component [organisationDetails]="organisationDetails"></app-prd-pba-numbers-form-component>
