--- a/src/app/containers/app/app.component.html
+++ b/src/app/containers/app/app.component.html
@@ -1,3 +1,4 @@
+<xuilib-cookie-banner [identifier]="cookieName" [appName]="'MyHMCTS'" *ngIf="isCookieBannerVisible"></xuilib-cookie-banner>
 <app-loader></app-loader>
 <title>{{pageTitle$ | async}}</title>
 
