--- a/projects/gov-ui/src/lib/components/hmcts-primary-navigation/hmcts-primary-navigation.component.html
+++ b/projects/gov-ui/src/lib/components/hmcts-primary-navigation/hmcts-primary-navigation.component.html
@@ -3,7 +3,7 @@
     <div class="govuk-header__logo" *ngIf="isBrandedHeader"></div>
     <ul class="hmcts-primary-navigation__list">
       <li class="hmcts-primary-navigation__item"  *ngFor="let item of items">
-          <a class="hmcts-primary-navigation__link" [attr.aria-current]="item.active ? true: null" [routerLink]="item.href">{{item.text}}</a>
+          <a class="hmcts-primary-navigation__link" routerLinkActive #rla="routerLinkActive" [attr.aria-current]="item.active || rla.isActive ? true: null" [routerLink]="item.href">{{item.text}}</a>
       </li>
     </ul>
   </div>
