--- a/src/app/components/hmcts-global-header/hmcts-global-header.component.html
+++ b/src/app/components/hmcts-global-header/hmcts-global-header.component.html
@@ -1,4 +1,4 @@
-<div class="hmcts-header" role="heading" aria-level="1">
+<div class="hmcts-header">
     <div class="hmcts-header__container">
       <ng-container  *ngIf="isBrandedHeader && !headerTitle.hideBranding; else noBrandedHeader">
         <div class="govuk-header__logo">
