--- a/src/register/containers/hmcts-form-builder/src/lib/components/fieldset/fieldset.component.html
+++ b/src/register/containers/hmcts-form-builder/src/lib/components/fieldset/fieldset.component.html
@@ -1,6 +1,12 @@
 <fieldset [attr.validate]="validate" [class]="classes" [attr.data]="data" [attr.group]="group">
-    <ng-container *ngFor="let item of data">
-        <app-jui-form-elements [validate]="validate" [group]="group" [data]="item"></app-jui-form-elements>
-    </ng-container>
-    <ng-content></ng-content>
+  <ng-container *ngFor="let item of data">
+    <legend *ngIf="item.legend" [class]="'govuk-fieldset__legend ' + item.legend.classes">
+        <h1 class="govuk-heading-xl">
+            {{item.legend.text}}
+        </h1>
+    </legend>    
+    <app-jui-form-elements [validate]="validate" [group]="group" [data]="item"></app-jui-form-elements>
+    <br>
+  </ng-container>
+  <ng-content></ng-content>
 </fieldset>
