--- a/src/organisation/containers/organisation/organisation.component.html
+++ b/src/organisation/containers/organisation/organisation.component.html
@@ -29,6 +29,15 @@
       </td>
     </tr>
     <!-- !PBA Numbers -->
+    <tr class="govuk-table__row" *ngIf="!organisationPaymentAccount">
+      <th class="govuk-table__header" scope="row">PBA number</th>
+      <td class="govuk-table__cell">
+        <div><p>Until you've added one or more payment by account (PBA) numbers,
+                you won't be able to make payments when creating a case or view your transactions.</p>
+              <p>Contact HMCTS support at <a href="mailto:MyHMCTSsupport@justice.gov.uk">MyHMCTSsupport@justice.gov.uk</a> to add a PBA number</p>
+        </div>
+      </td>
+    </tr>
     <tr class="govuk-table__row" *ngIf="organisationDxAddress && organisationDxAddress.dxNumber">
       <th class="govuk-table__header" scope="row">DX number</th>
       <td class="govuk-table__cell">
