--- a/src/organisation/containers/update-pba-check/update-pba-numbers-check.component.html
+++ b/src/organisation/containers/update-pba-check/update-pba-numbers-check.component.html
@@ -1,4 +1,4 @@
-<app-hmcts-main-wrapper [backLink]="'/organisation/update-pba-numbers'" [title]="title">
+<app-hmcts-main-wrapper [backLink]="'/organisation/update-pba-numbers'" [title]="title" [summaryErrors]="summaryErrors">
   <table class="govuk-table">
     <tbody class="govuk-table__body">
 
