--- a/src/app/containers/app/app.component.html
+++ b/src/app/containers/app/app.component.html
@@ -1,4 +1,11 @@
-<xuilib-cookie-banner [identifier]="cookieName" [appName]="'MyHMCTS'" *ngIf="isCookieBannerVisible"></xuilib-cookie-banner>
+<xuilib-cookie-banner 
+  [identifier]="cookieName"
+  [appName]="'MyHMCTS'"
+  *ngIf="isCookieBannerVisible"
+  (acceptanceNotifier)="notifyAcceptance()"
+  (rejectionNotifier)="notifyRejection()"
+></xuilib-cookie-banner>
+
 <app-loader></app-loader>
 <title>{{pageTitle$ | async}}</title>
 
