--- a/src/organisation/containers/update-pba-check/update-pba-numbers-check.component.html
+++ b/src/organisation/containers/update-pba-check/update-pba-numbers-check.component.html
@@ -22,9 +22,7 @@
       <tr class="govuk-table__row" *ngIf="organisationDetails.pendingRemovePaymentAccount.length > 0">
         <th class="govuk-table__header" scope="row">Accounts to be removed</th>
         <td class="govuk-table__cell">
-          <div *ngFor="let pba of organisationDetails.pendingRemovePaymentAccount">
-            {{pba.pbaNumber}}
-          </div>
+          <div *ngFor="let pba of organisationDetails.pendingRemovePaymentAccount">{{pba.pbaNumber}}</div>
         </td>
         <td class="govuk-table__cell">
           <a class="govuk-link fright" routerLink="/organisation/update-pba-numbers"
