--- a/src/fee-accounts/containers/overview/account-overview.component.html
+++ b/src/fee-accounts/containers/overview/account-overview.component.html
@@ -6,7 +6,7 @@
   <app-account-overview-container
   *ngIf="!(loading$ | async) else loading"
   [isAccountAvailableForOrg]="isOrgAccountAvailable$ | async"
-  [oneOrMoreAccountInfoMissing]="oneOrMoreAccountMissing$ | async"
+  [singleOrMoreAccountMissing]="singleOrMoreAccountMissing$ | async"
   [columnConfig]="columnConfig" [rows]="accounts$ | async" [firstCellIsHeader]="false" [caption]="''"
 ></app-account-overview-container>
   <ng-template #loading>
