--- a/src/users/components/invite-user-permissions/invite-user-permission.component.html
+++ b/src/users/components/invite-user-permissions/invite-user-permission.component.html
@@ -1,7 +1,7 @@
   <!--permissions -->
   <ng-container [formGroup]="inviteUserForm">
     <lib-gov-uk-form-group-wrapper
-      [config]="{hint: 'Choose at least one action the user can do. You can change this later.', 
+      [config]="{hint: 'Choose at least one action the user can do. You can change this later.',
       legend: 'What user Permissions would you like to approve?', key: 'roles'}"
       [formGroupName]="'roles'"
       [error]="errorMessages">
@@ -10,7 +10,7 @@
         <lib-gov-checkbox
           [group]="inviteUserForm.controls['roles']"
           [isChecked]="isPuiCaseManager"
-          [config]="{value: 'pui-case-manager',  label: 'Manage cases', name: 'roles', hint: 'View, 
+          [config]="{value: 'pui-case-manager',  label: 'Manage cases', name: 'roles', hint: 'View,
           create and progress cases.', focusOn: 'roles', hiddenLabelContext: 'Permit users to '}">
         </lib-gov-checkbox>
 
@@ -28,15 +28,23 @@
           hint: 'View the organisation name and address.', hiddenLabelContext: 'Permit users to '}">
         </lib-gov-checkbox>
 
-        <lib-gov-checkbox id="checkbox-grant-case-access-admin" *ngIf="grantCaseAccessAdmin$ | async"
+        <lib-gov-checkbox
+        id="checkbox-grant-case-access-admin" *ngIf="grantCaseAccessAdmin$ | async"
           [group]="inviteUserForm.controls['roles']"
           [isChecked]="isCaseAccessAdmin"
           [config]="{value: 'pui-caa', label: 'Case access administrator', name: 'roles',
-          hint: 'Manage case access for all users within your organisation. 
-          You can assign this role to any user in your organisation. However, your service might not currently support this role. 
-          You will receive further guidance once it becomes available.', 
+          hint: 'Manage case access for all users within your organisation.
+          You can assign this role to any user in your organisation. However, your service might not currently support this role.
+          You will receive further guidance once it becomes available.',
           hiddenLabelContext: 'Permit users to '}">
-      </lib-gov-checkbox>
+        </lib-gov-checkbox>
+
+        <lib-gov-checkbox id="checkbox-grant-finance-manager"  *ngIf="grantFinanceManager$ | async"
+          [group]="inviteUserForm.controls['roles']"
+          [isChecked]="isPuiFinanceManager"
+          [config]="{value: 'pui-finance-manager', label: 'Manage fee accounts', name: 'roles',
+          hint: 'View payments, account balances, available credit and transactions.'}">
+        </lib-gov-checkbox>
       </div>
 
     </lib-gov-uk-form-group-wrapper>
