--- a/src/register/containers/hmcts-form-builder/src/lib/components/form-builder/form-builder.component.html
+++ b/src/register/containers/hmcts-form-builder/src/lib/components/form-builder/form-builder.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="isPageValid && formDraft.invalid">
-  <app-validation-header [validationHeaderErrorMessages]="this.pageItems.validationHeaderErrorMessages" [formGroup]="formDraft">
+  <app-validation-header [validationHeaderErrorMessages]="this.pageItems.formGroupValidators" [formGroup]="formDraft">
   </app-validation-header>
 </ng-container>
 
@@ -16,7 +16,12 @@
                     [data]="group.fieldset"
                     [validate]="isPageValid">
       </app-fieldset>
-      <app-jui-form-elements [group]="formDraft" [validate]="isPageValid" [data]="group"></app-jui-form-elements>
+      <app-jui-form-elements [group]="formDraft"
+                             [validate]="isPageValid"
+                             [data]="group"
+                             (btnClick)="onBtnClick($event)"
+                             (blurCast)="onBlur($event)"
+      ></app-jui-form-elements>
     </div>
   </div>
 </form>
