--- a/src/organisation/containers/organisation/organisation.component.html
+++ b/src/organisation/containers/organisation/organisation.component.html
@@ -1,4 +1,14 @@
 <app-hmcts-main-wrapper [title]="'Organisation'">
+  <div *ngIf="organisationDetails.response" class="hmcts-banner hmcts-banner--success">
+    <div *ngIf="organisationDetails.response.code === 200" class="hmcts-banner__message">
+      <span class="hmcts-banner__assistive">Success</span>
+      PBA accounts submitted. We'll email you once they're verified.
+    </div>
+    <div *ngIf="organisationDetails.response.code === 202" class="hmcts-banner__message">
+      <span class="hmcts-banner__assistive">Success</span>
+      PBA numbers removed.
+    </div>
+  </div>
   <table class="govuk-table">
     <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
@@ -28,7 +38,7 @@
         <a class="govuk-link fright" routerLink="/organisation/update-pba-numbers" *ngIf="showChangePbaNumberLink" id="change-pba-account-numbers__link" aria-label="Change PBA account numbers">Change</a>
 
         <div *ngIf="organisationPaymentAccount">
-          <div *ngFor="let pbaNumber of organisationPaymentAccount">{{pbaNumber}}</div>
+          <div *ngFor="let pba of organisationPaymentAccount">{{pbaNumberWithStatus(pba)}}</div>
         </div>
 
         <div *ngIf="!organisationPaymentAccount">
