--- a/src/organisation/containers/update-pba-check/update-pba-numbers-check.component.html
+++ b/src/organisation/containers/update-pba-check/update-pba-numbers-check.component.html
@@ -1,13 +1,15 @@
-<app-hmcts-main-wrapper [backLink]="'/organisation/update-pba-numbers'" [title]="title">
+<app-hmcts-main-wrapper [backLink]="'/organisation/update-pba-numbers'" [title]="title" [summaryErrors]="summaryErrors">
   <table class="govuk-table">
     <tbody class="govuk-table__body">
 
       <!-- Accounts to be added -->
       <tr class="govuk-table__row" *ngIf="organisationDetails.pendingAddPaymentAccount.length > 0">
-        <th class="govuk-table__header">Accounts to be added</th>
+        <th class="govuk-table__header nowrap">Accounts to be added</th>
         <td class="govuk-table__cell">
-          <div *ngFor="let pba of organisationDetails.pendingAddPaymentAccount">
-            {{pba.pbaNumber}}
+          <div *ngFor="let pba of organisationDetails.pendingAddPaymentAccount">{{pba.pbaNumber}}</div>
+          <div class="already-used-pba" *ngIf="alreadyUsedError">{{alreadyUsedError}}
+            <br />You should check that the PBA has been entered correctly.
+            If you're still having problems, contact HMCTS.
           </div>
         </td>
         <td class="govuk-table__cell">
@@ -20,13 +22,11 @@
       <tr class="govuk-table__row" *ngIf="organisationDetails.pendingRemovePaymentAccount.length > 0">
         <th class="govuk-table__header" scope="row">Accounts to be removed</th>
         <td class="govuk-table__cell">
-          <div *ngFor="let pba of organisationDetails.pendingRemovePaymentAccount">
-            {{pba.pbaNumber}}
-          </div>
+          <div *ngFor="let pba of organisationDetails.pendingRemovePaymentAccount">{{pba.pbaNumber}}</div>
         </td>
         <td class="govuk-table__cell">
           <a class="govuk-link fright" routerLink="/organisation/update-pba-numbers"
-            id="change-pba-account-numbers__link" aria-label="Change PBA account numbers">Change</a>
+            id="change-pending-remove-pba-numbers__link" aria-label="Change PBA account numbers">Change</a>
         </td>
       </tr>
     </tbody>
@@ -46,5 +46,3 @@
     </button>
   </div>
 </app-hmcts-main-wrapper>
-
-<!-- You won't be able to use this PBA account unless it's verified again. -->
