EUI-1717 - moved skip to content link inside header element. Removed unneeded onFocusMainContent method

--- a/src/app/containers/header/header.component.html
+++ b/src/app/containers/header/header.component.html
@@ -1,4 +1,7 @@
 <header>
+
+    <a [routerLink]="" fragment="{{mainContentId}}" class="govuk-skip-link">Skip to main content</a>
+
     <app-hmcts-global-header
       [userLoggedIn]="isUserLoggedIn$ | async"
       [showHeaderItems]="showHeaderItems$ | async"
