EUI-1697 - removed unneeded protocol to address PR comment

--- a/src/shared/components/phase-banner/phase-banner.component.html
+++ b/src/shared/components/phase-banner/phase-banner.component.html
@@ -5,7 +5,7 @@
           </strong>
           <span class="govuk-phase-banner__text">
               This is a new service – your
-              <a class="govuk-link" href="https://www.smartsurvey.co.uk/s/CCDSurvey/" target="_blank" rel="noopener noreferrer" aria-label="provide your feedback - opens in a new window">
+              <a class="govuk-link" href="//www.smartsurvey.co.uk/s/CCDSurvey" target="_blank" rel="noopener noreferrer" aria-label="provide your feedback - opens in a new window">
                 feedback
               </a>
               will help us to improve it.
