--- a/src/app/containers/app/app.component.html
+++ b/src/app/containers/app/app.component.html
@@ -8,7 +8,7 @@
 
 <a [routerLink]="" fragment="{{mainContentId}}" class="govuk-skip-link" (click)="onFocusMainContent()">Skip to main content</a>
 <app-loader></app-loader>
-<title>{{pageTitle$ | async}}</title>
+<title> Manage Organisation</title>
 
 <app-header
   [navItems]="navItems$ | async"
