--- a/src/organisation/containers/organisation/organisation.component.html
+++ b/src/organisation/containers/organisation/organisation.component.html
@@ -1,4 +1,5 @@
 <app-hmcts-main-wrapper [title]="'Organisation'">
+  <app-prd-pba-success [response]="organisationDetails.response"></app-prd-pba-success>
   <table class="govuk-table">
     <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
@@ -22,10 +23,14 @@
       </td>
     </tr>
     <!-- PBA Numbers -->
-    <tr class="govuk-table__row" *ngIf="organisationPaymentAccount">
-      <th class="govuk-table__header" scope="row">PBA number</th>
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">PBA numbers</th>
       <td class="govuk-table__cell">
-        <div *ngFor="let pbaNumber of organisationPaymentAccount">{{pbaNumber}}</div>
+        <a class="govuk-link fright" routerLink="/organisation/update-pba-numbers" *ngIf="showChangePbaNumberLink" id="change-pba-account-numbers__link" aria-label="Change PBA account numbers">Change</a>
+          <div *ngFor="let pba of organisationPaymentAccount">{{pba.pbaNumber}} (Accepted)</div>
+            <div *ngIf="!organisationPaymentAccount">No PBA accounts registered</div>
+          <div *ngFor="let pendingPBA of organisationPendingPaymentAccount">{{pendingPBA}}  (Pending)</div>
+          <div *ngIf="!organisationPendingPaymentAccount">No Pending PBA accounts registered</div>
       </td>
     </tr>
     <!-- !PBA Numbers -->
@@ -66,4 +71,3 @@
     </tbody>
   </table>
 </app-hmcts-main-wrapper>
-
