--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,4 +79,8 @@ div.govuk-header__logo, div.hmcts-header__logo {
 .mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar{
   background: #005ea5;
   height: 5px;
+}
+
+.fright {
+  float: right;
 } 
