--- a/src/organisation/containers/organisation/organisation.component.html
+++ b/src/organisation/containers/organisation/organisation.component.html
@@ -26,11 +26,17 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">PBA numbers</th>
       <td class="govuk-table__cell">
-        <a class="govuk-link fright" routerLink="/organisation/update-pba-numbers" *ngIf="showChangePbaNumberLink" id="change-pba-account-numbers__link" aria-label="Change PBA account numbers">Change</a>
-          <div *ngFor="let pba of organisationPaymentAccount">{{pba.pbaNumber}} (Accepted)</div>
+        <div style = "float:left">
+          <div *ngFor="let pba of organisationPaymentAccount">{{pba.pbaNumber}}</div>
             <div *ngIf="!organisationPaymentAccount">No PBA accounts registered</div>
-          <div *ngFor="let pendingPBA of organisationPendingPaymentAccount">{{pendingPBA}}  (Pending)</div>
+            <br>
+          <div *ngFor="let pendingPBA of organisationPendingPaymentAccount">{{pendingPBA}}  (Pending approval)</div>
           <div *ngIf="!organisationPendingPaymentAccount">No Pending PBA accounts registered</div>
+        </div>
+        <a class="govuk-link fright"
+           style = "float:right"
+        routerLink="/organisation/update-pba-numbers" 
+        *ngIf="showChangePbaNumberLink" id="change-pba-account-numbers__link" aria-label="Change PBA account numbers">Change</a>
       </td>
     </tr>
     <!-- !PBA Numbers -->
